Minor production issues

--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -10,7 +10,7 @@
                 </div>
 
                 <div class="user">
-                  <img class="img-circle" src="/assets/vcard.jpg"/>
+                  <%= image_tag("vcard.jpg") %>
                 </div>
                 <div class="content">
                   <div class="main">
