Add dynamic meta tags

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -5,22 +5,22 @@
                     <%= link_to 'Back to ALXS Design', portfolio_path %>
                 </li>
                 <li>
-                    <a href="#" alt="This">This<span class="fa fa-wrench" alt="Dashboard"></span></a>
+                    <a href="#" alt="This">This<span class="fi-wrench" alt="Dashboard"></span></a>
                 </li>
                 <li>
-                    <a href="#" alt="Is">Is<span class="fa fa-link" alt="Shortcuts"></a>
+                    <a href="#" alt="Is">Is<span class="fi-link" alt="Shortcuts"></a>
                 </li>
                 <li>
-                    <a href="#">An<span class="fa fa-bar-chart" alt="Overview"></a>
+                    <a href="#">An<span class="fi-clipboard-notes" alt="Overview"></a>
                 </li>
                 <li>
-                    <a href="#">Example<span class="fa fa-calendar" alt="Events"></a>
+                    <a href="#">Example<span class="fi-calendar" alt="Events"></a>
                 </li>
                 <li>
-                    <a href="#">Navigation<span class="fa fa-comments" alt="About"></a>
+                    <a href="#">Navigation<span class="fi-comments" alt="About"></a>
                 </li>
                 <li>
-                    <a href="#">Menu<span class="fa fa-thumbs-up" alt="Services"></a>
+                    <a href="#">Menu<span class="fi-thumbnails" alt="Services"></a>
                 </li>
             </ul>
         </div>
