--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,3 +1,6 @@
+<% provide(:title, "ALXS Design | About") %>
+<% provide(:ogdescription, "All about Alex Scott and ALXS Design, including a brief summary of experience and areas of expertise.") %>
+<% provide(:path, "about") %>
 <div id="about">
   <div class="row outer" id="one">
     <div class="large-4 columns outer">
@@ -35,7 +38,7 @@
                 </div> 
                 <div class="content">
                   <div class="main">
-                    <h4 class="text-center">Experince</h4>
+                    <h4 class="text-center">Experience</h4>
                     <p>Created numerous website, plugins and projects that can be found in the portfolio section</p><br />
                     <h4 class="text-center">Areas of Expertise</h4>
                     <p>Ruby on Rails, HTML5/CSS3, jQuery, Responsive Design and more...</p>
