--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,3 +1,6 @@
+<% provide(:title, "ALXS Design | Portfolio") %>
+<% provide(:path, "portfolio") %>
+<% provide(:ogimage, "http://alxs.co.uk/assets/portfolio-ss.png") %>
 <div class="portfolio-wrapper">
   <div class="row">
     <div class="inner">
