Update meta tags

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "ALXS Design | Contact Form") %>
+<% provide(:path, "contact") %>
 <div id="home" class="contact-form">
   <div class="row outer" id="one">
     <div class="inner">
